// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main elements match recorded snapshots BottomRightCorner renders with standard size 1`] = `
<svg
  className="invisible absolute bottom-0 right-0 z-10 md:visible"
  height={300}
  width={300}
>
  <defs>
    <linearGradient
      id="grad1"
      x1="0%"
      x2="100%"
      y1="0%"
      y2="100%"
    >
      <stop
        className="gradient2"
        offset="0"
      />
      <stop
        className="gradient1"
        offset=".5"
      />
      <stop
        className="gradient2"
        offset="1"
      />
    </linearGradient>
  </defs>
  <path
    d="M292 300H0l20-20h255a5 5 0 0 0 5-5V20l20-20v292a8 8 0 0 1-8 8Z"
    fill="url('#grad1')"
  />
</svg>
`;

exports[`main elements match recorded snapshots External Links exist upon render 1`] = `
[
  <a
    className="duration-150 ease-in hover:scale-110"
    href="https://github.com/senyc"
    rel="me"
    target="_blank"
    title="GitHub"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
      />
    </svg>
  </a>,
  <a
    className="duration-150 ease-in hover:scale-110"
    href="mailto:kdbomhof@gmail.com"
    rel="me"
    target="_blank"
    title="Email"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
      />
      <polyline
        points="22,6 12,13 2,6"
      />
    </svg>
  </a>,
  <a
    className="duration-150 ease-in hover:scale-110"
    href="https://www.linkedin.com/in/kyler-bomhof/"
    rel="me"
    target="_blank"
    title="Linkedin"
  >
    <svg
      fill="none"
      height="24"
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
      />
      <rect
        height="12"
        width="4"
        x="2"
        y="9"
      />
      <circle
        cx="4"
        cy="4"
        r="2"
      />
    </svg>
  </a>,
]
`;

exports[`main elements match recorded snapshots TopLeftCorner renders with standard size 1`] = `
<svg
  className="invisible absolute left-0 top-0 z-10 sm:visible"
  height={300}
  width={300}
>
  <defs>
    <linearGradient
      id="grad1"
      x1="0%"
      x2="100%"
      y1="0%"
      y2="100%"
    >
      <stop
        className="gradient1"
        offset="0"
      />
      <stop
        className="gradient2"
        offset=".5"
      />
      <stop
        className="gradient1"
        offset="1"
      />
    </linearGradient>
  </defs>
  <path
    d="M8 0h292l-20 20H25a5 5 0 0 0-5 5v255L0 300V8a8 8 0 0 1 8-8Z"
    fill="url('#grad1')"
  />
</svg>
`;
